Fixed the title align

--- a/frontendmentor/results-summary-component-main/assets/css/style_result.css
+++ b/frontendmentor/results-summary-component-main/assets/css/style_result.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   text-align: center;
   background: linear-gradient(var(--light_slate), var(--light_royal));
   width: 400px;
@@ -12,9 +11,9 @@
 }
 
 .result-title {
-  font-size: 2rem;
+  font-size: 3rem;
   color: hsla(0, 0%, 100%, 0.75);
-  margin-top: 0;
+  margin-top: 2.1rem;
 }
 
 .result-pointing {
